--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!-- <app-timeline></app-timeline> -->
-<app-timeline-canvas></app-timeline-canvas>
+<!-- <app-timeline-canvas></app-timeline-canvas> -->
+<!-- <app-timeline-zoom></app-timeline-zoom> -->
+<app-timeline-scale></app-timeline-scale>
