--- a/src/app/components/timeline-canvas/timeline-canvas.component.html
+++ b/src/app/components/timeline-canvas/timeline-canvas.component.html
@@ -1,4 +1,5 @@
-<p>timeline-canvas works!</p>
-<canvas #canvas></canvas>
-<button (click)="zoom('in')">+</button>
-<button (click)="zoom('out')">-</button>
+
+
+    <canvas #canvas id="canvas"></canvas>
+    <!-- <button (click)="zoom('in')">+</button>
+    <button (click)="zoom('out')">-</button> -->
