--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <app-timeline></app-timeline> -->
 <!-- <app-timeline-canvas></app-timeline-canvas> -->
 <!-- <app-timeline-zoom></app-timeline-zoom> -->
-<app-timeline-scale></app-timeline-scale>
+<!-- <app-timeline-scale></app-timeline-scale> -->
+<app-time></app-time>
